Add first projects post on Archangel

--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 layout: page
 title: Projects
 ---
+
+<h1 style="text-align: center; margin-top: 5rem; margin-bottom: 1rem" class="animated"> Projects </h1>
 <section class="list">
     {% for post in site.posts %}
         {% if post.projects %}
