--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 # blog page must be named index.html and in its own folder to support pagination
 # https://jekyllrb.com/docs/pagination/
 layout: page
-title: research
+title: Research
 ---
 <section class="list">
 	<h2> Journal, Conference, and Workshop Papers
