Add boldface for paper title

--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@ title: Research
 		<ul>
 			<li>
 				<b>Sriram Sami</b>, Sean Tan Rui Xiang, Yimin Dai, Nirupam Roy, and Jun Han <br> <br>
-				<i>"Poster: LidarPhone: Acoustic Eavesdropping using a Lidar Sensor" </i> <br> <br>
+				<b> "Poster: LidarPhone: Acoustic Eavesdropping using a Lidar Sensor" </b> <br> <br>
 				To appear in The Proceedings of 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				
