Open paper in new tab

--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@ title: Research
 				To appear in The Proceedings of 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				<i> Acceptance Rate: 20.2% (43 of 213) </i> <br><br>
-				[ &nbsp; <b><a href="/assets/lidarphone-sensys2020.pdf">Paper</a></b> &nbsp; ]
+				[ &nbsp; <b><a href="/assets/lidarphone-sensys2020.pdf" target="_blank">Paper</a></b> &nbsp; ]
 			</li>
 		</ul>
 </section>
@@ -28,7 +28,7 @@ title: Research
 				To appear in The Proceedings of 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				
-				[ &nbsp; <b><a href="/assets/lidarphone-posterabstract-sensys2020.pdf">Poster Writeup</a></b> &nbsp; ]
+				[ &nbsp; <b><a href="/assets/lidarphone-posterabstract-sensys2020.pdf" target="_blank">Poster Writeup</a></b> &nbsp; ]
 			</li>
 		</ul>
 </section>
