--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@ title: Research
 			<li>
 				<u><b>Sriram Sami</b></u>, Yimin Dai, Sean Tan Rui Xiang, Nirupam Roy, and Jun Han <br> <br>
 				<b>"Spying with Your Robot Vacuum Cleaner: Eavesdropping via Lidar Sensors" </b> <br> <br>
-				To appear in The Proceedings of 18th ACM Conference on Embedded Networked Sensor Systems
+				To appear in The Proceedings of the 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				<i> Acceptance Rate: 20.2% (43 of 213) </i> <br><br>
 				[ &nbsp; <b><a href="/assets/lidarphone-sensys2020.pdf" target="_blank">Paper</a></b> &nbsp; ]
@@ -25,7 +25,7 @@ title: Research
 			<li>
 				<u><b>Sriram Sami</b></u>, Sean Tan Rui Xiang, Yimin Dai, Nirupam Roy, and Jun Han <br> <br>
 				<b> "Poster: LidarPhone: Acoustic Eavesdropping using a Lidar Sensor" </b> <br> <br>
-				To appear in The Proceedings of 18th ACM Conference on Embedded Networked Sensor Systems
+				To appear in The Proceedings of the 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				
 				[ &nbsp; <b><a href="/assets/lidarphone-posterabstract-sensys2020.pdf" target="_blank">Poster Writeup</a></b> &nbsp; ]
