--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@ title: Research
 				To appear in The Proceedings of the 18th ACM Conference on Embedded Networked Sensor Systems
 				(<a href="http://sensys.acm.org/2020/program/" target="_blank"><b>SenSys 2020</b></a>) <br> <br>
 				<i> Acceptance Rate: 20.2% (43 of 213) </i> <br><br>
-				[ &nbsp; <b><a href="/assets/lidarphone-sensys2020.pdf" target="_blank">Paper</a></b> &nbsp; | &nbsp;  <b><a href="https://youtu.be/d6T2mBrroQ4" target="_blank">Short Video</a></b> &nbsp; ]
+				[ &nbsp; <b><a href="/assets/lidarphone-sensys2020.pdf" target="_blank">Paper</a></b> &nbsp; | &nbsp;  <b><a href="https://youtu.be/d6T2mBrroQ4" target="_blank">Short Video</a></b> &nbsp; | &nbsp; <b><a href="https://news.ycombinator.com/item?id=25140505" target="_blank">Hacker News</a></b> &nbsp; ]
 			</li>
 		</ul>
 </section>
