Fix frontpage width issue

--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@ title: Research
 		<a href="https://www.hackster.io/news/spying-robot-vacuums-really-suck-525120df5929" target="_blank">Hackster.io</a>, 
 		<a href="https://threatpost.com/robot-vacuums-audio-lidarphone-hack/161421/" target="_blank">Threatpost</a>, 
 		<a href="https://it.slashdot.org/story/20/11/19/2130216/lidarphone-attack-converts-smart-vacuums-into-microphones?utm_source=slashdot&utm_medium=twitter" target="_blank">Slashdot</a>, 
-		and many more.
+		and others.
 		<!--
 		<a href="" target="_blank"> </a>, 
 		<a href="" target="_blank"> </a>, 
