Add SoC video to website

--- a/research.html
+++ b/research.html
@@ -22,6 +22,10 @@ title: Research
 				(<a href="http://sensys.acm.org/2021/" target="_blank"><b>SenSys 2021</b></a>) <br> <br>
 				<i> Acceptance Rate: 17.9% (25 of 139)</i> <br><br>
 
+				<h3> LAPD Demo </h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AFjGQNaqmXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 				<h3> LAPD Teaser Video </h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/F4bZwQHBdV4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
