--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <h1>Uh oh!</h1>
+  <h1>Uh oh! We can't find this page.</h1>
   <div class="link">
-    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />
+    <!--<img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />-->
   </div>
   <br />
   <br />
