Update teaching ratings and resume

--- a/teaching.html
+++ b/teaching.html
@@ -15,6 +15,7 @@ title: Teaching
 	<ul>
 		<li> <strong> CS2106: Introduction to Operating Systems </strong> </li>
 		<li> <strong> CS3210: Parallel Computing </strong> </li>
+		<li> <strong> CS3211: Parallel and Concurrent Programming </strong> </li>
 	</ul>
 
 	However I have also taught <em> security </em> modules in the past, such as:
@@ -33,6 +34,7 @@ title: Teaching
 	I'm fortunate to have received teaching awards during both my undergraduate and graduate teaching career.
 
 	<ul>
+		<li> AY 2022/2023: <strong> NUS Long Service Award </strong> </li>
 		<li> AY 2020/2021: <strong> Full Time Teaching Assistant Award </strong> </li>
 		<li> AY 2018/2019: <strong> Honors List of Student Tutors </strong> </li>
 	</ul>
