--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,8 @@ title: Teaching
 	I'm fortunate to have received teaching awards during both my undergraduate and graduate teaching career.
 
 	<ul>
-		<li> AY 2022/2023: <strong> NUS Long Service Award </strong> </li>
+		<li> AY 2021/2022: <strong> Full Time Teaching Assistant Award </strong> </li>
+		<li> AY 2021/2022: <strong> NUS Long Service Award </strong> </li>
 		<li> AY 2020/2021: <strong> Full Time Teaching Assistant Award </strong> </li>
 		<li> AY 2018/2019: <strong> Honors List of Student Tutors </strong> </li>
 	</ul>
