Try to add instructions for build to readme, comment out a table form of the teaching reviews

--- a/teaching.html
+++ b/teaching.html
@@ -44,4 +44,62 @@ title: Teaching
 
 	<h3> Teaching Ratings </h3>
 
+	<!-- Nicely formatted table with columns: Module, Year & Semester, Teaching Rating, and Department Average-->
+	<!-- <table>
+		<tr>
+			<th> Module </th>
+			<th> Year & Semester </th>
+			<th> Teaching Rating </th>
+			<th> Department Average </th>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2020/2021, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2019/2020, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2018/2019, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2017/2018, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2016/2017, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2015/2016, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2014/2015, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+		<tr>
+			<td> CS2106 </td>
+			<td> AY 2013/2014, Semester 1 </td>
+			<td> 4.8 </td>
+			<td> 4.5 </td>
+		</tr>
+	</table> -->
+
 	<img src="/assets/ratings.svg"></img>
