--- a/teaching.html
+++ b/teaching.html
@@ -34,6 +34,7 @@ title: Teaching
 	I'm fortunate to have received teaching awards during both my undergraduate and graduate teaching career.
 
 	<ul>
+		<li> AY 2023/2024: <strong> Annual Teaching Excellence Award (ATEA) - Team Category </strong> </li>
 		<li> AY 2021/2022: <strong> Full Time Teaching Assistant Award </strong> </li>
 		<li> AY 2021/2022: <strong> NUS Long Service Award </strong> </li>
 		<li> AY 2020/2021: <strong> Full Time Teaching Assistant Award </strong> </li>
@@ -102,4 +103,4 @@ title: Teaching
 		</tr>
 	</table> -->
 
-	<img src="/assets/ratings.svg"></img>
+	<!-- <img src="/assets/ratings.svg"></img> -->
