--- a/teaching.html
+++ b/teaching.html
@@ -43,7 +43,7 @@ title: Teaching
 </section>
 
 
-	<h3> Teaching Ratings </h3>
+	<!-- <h3> Teaching Ratings </h3> -->
 
 	<!-- Nicely formatted table with columns: Module, Year & Semester, Teaching Rating, and Department Average-->
 	<!-- <table>
