Update personal website for Instructor stuff

--- a/teaching.html
+++ b/teaching.html
@@ -6,25 +6,37 @@ title: Teaching
 ---
 <h3> Overview </h3>
 <section>
-	Since 2019, I have been a <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/tutorship/"><strong>Graduate Tutor</strong></a> (and concurrently, a PhD student) at the National University of Singapore's Computer Science Department.
-	<br/>
-	<br/>
-	Before this, I was an undergraduate TA, and I had such a good experience that I decided to pursue teaching :) <br/> <br/>
+	Since 2024, I am an Instructor at the National University of Singapore's Computer Science Department, while awaiting my PhD defense.
+</section>
 
-	I focus primarily on (and have taught) <em> systems </em> modules such as:
+<br/>
+
+<section>
+	Before, I was a <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/tutorship/"><strong>Graduate Tutor</strong></a> (and concurrently, a PhD student).
+	<br/>
+	<br/>
+	Before that, I was an undergraduate TA, and I had such a good experience that I decided to pursue teaching :) <br/> <br/>
+
+	I focus primarily on (and have taught) <em> systems </em> courses such as:
 	<ul>
 		<li> <strong> CS2106: Introduction to Operating Systems </strong> </li>
 		<li> <strong> CS3210: Parallel Computing </strong> </li>
 		<li> <strong> CS3211: Parallel and Concurrent Programming </strong> </li>
 	</ul>
 
-	However I have also taught <em> security </em> modules in the past, such as:
+	However I have also taught <em> security </em> courses in the past, such as:
 
 	<ul>
 		<li> <strong> CS2107: Introduction to Information Security </strong> </li>
 	</ul>
 
-	This focus is in line with my <a href="/research/">research</a> on sensors (a systems-heavy area) and their security implications.
+	Now, I also teach <em> introductory Computer Engineering </em> courses, such as:
+	<ul>
+		<li> <strong> CG1111A: Engineering Principles and Practice I </strong> </li>
+		<li> <strong> CG2111A: Engineering Principles and Practice II </strong> </li>
+	</ul>
+
+	These focuses are in line with my <a href="/research/">research</a> on sensors (a signals, systems, and hardware/electronics-heavy area) and their security implications.
 
 </section>
 
