--- a/activesg.html
+++ b/activesg.html
@@ -1,3 +1,9 @@
+---
+# blog page must be named index.html and in its own folder to support pagination
+# https://jekyllrb.com/docs/pagination/
+layout: page
+title: ActiveSG Capacities
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
