Hacky iframe solution

--- a/activesg.html
+++ b/activesg.html
@@ -1,278 +1,12 @@
 ---
-# blog page must be named index.html and in its own folder to support pagination
-# https://jekyllrb.com/docs/pagination/
-layout: page
-title: ActiveSG Capacities
+layout: default
+title: Capacities Dashboard
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Activesg Capacities Dashboard</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 20px;
-    }
-    h1, h2, h3 {
-      color: #333;
-    }
-    .search-box {
-      margin-bottom: 20px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 30px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    /* Chart container using viewport-relative widths */
-    .chart-container {
-      margin-bottom: 40px;
-      width: 100%;
-      max-width: 90vw; /* On narrow screens, almost full width */
-      margin-left: auto;
-      margin-right: auto;
-    }
-    /* On larger screens, constrain to a smaller percentage */
-    @media (min-width: 768px) {
-      .chart-container {
-        max-width: 70vw;
-      }
-    }
-  </style>
-  <!-- Chart.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-  <h1>Activesg Capacities Dashboard</h1>
-  
-  <!-- Search filter -->
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="Search gyms..." />
-  </div>
 
-  <!-- Current capacities display -->
-  <h2>Current Capacities</h2>
-  <div id="currentCapacities">Loading current capacities...</div>
+<h1>Capacities Dashboard</h1>
 
-  <!-- Historical graphs -->
-  <h2>Historical Data (Day-by-Day, 10-min Blocks)</h2>
-  <div id="historicalGraphs">Loading historical graphs...</div>
-
-  <script>
-    // URL for aggregated JSON (use the raw URL)
-    const aggregatedUrl = 'https://raw.githubusercontent.com/frizensami/activesg-capacities/main/aggregated_capacities.json';
-    let aggregatedData;
-    let filteredGyms = []; // gyms matching the search
-
-    // Fixed x-axis labels: one per 10-minute block from 00:00 to 23:50.
-    const globalLabels = [];
-    for (let h = 0; h < 24; h++) {
-      for (let m = 0; m < 60; m += 10) {
-        let hh = h.toString().padStart(2, '0');
-        let mm = m.toString().padStart(2, '0');
-        globalLabels.push(`${hh}:${mm}`);
-      }
-    }
-
-    // Load aggregated data
-    fetch(aggregatedUrl)
-      .then(response => response.json())
-      .then(data => {
-        aggregatedData = data.data;
-        updateDashboard();
-      })
-      .catch(error => {
-        document.body.innerHTML = 'Error loading data: ' + error;
-      });
-
-    // Filter gyms as the user types in the search input
-    document.getElementById('searchInput').addEventListener('input', updateDashboard);
-
-    function updateDashboard() {
-      const searchQuery = document.getElementById('searchInput').value.toLowerCase();
-      // Filter gym names based on search query
-      filteredGyms = Object.keys(aggregatedData).filter(gym => gym.toLowerCase().includes(searchQuery));
-      
-      renderCurrentCapacities();
-      renderHistoricalGraphs();
-    }
-
-    // Display current capacities in a table.
-    function renderCurrentCapacities() {
-      const container = document.getElementById('currentCapacities');
-      container.innerHTML = '';
-      
-      const table = document.createElement('table');
-      const headerRow = document.createElement('tr');
-      ['Gym', 'Latest Capacity', 'Status', 'Last Update (UTC+8)'].forEach(text => {
-        const th = document.createElement('th');
-        th.textContent = text;
-        headerRow.appendChild(th);
-      });
-      table.appendChild(headerRow);
-
-      filteredGyms.forEach(gym => {
-        const gymData = aggregatedData[gym];
-        // Sort the dates and get the most recent day
-        const dates = Object.keys(gymData).sort();
-        const latestDate = dates[dates.length - 1];
-        const dayData = gymData[latestDate];
-
-        let latestEntry;
-        if (Array.isArray(dayData)) {
-          // For raw data, sort entries by timestamp and take the last one.
-          const sorted = dayData.slice().sort((a, b) => a.timestamp - b.timestamp);
-          latestEntry = sorted[sorted.length - 1];
-        } else {
-          // For summarized days, only average is available.
-          latestEntry = { capacity: dayData.average_capacity, timestamp: null, isClosed: '' };
-        }
-
-        const tr = document.createElement('tr');
-        const tdGym = document.createElement('td');
-        tdGym.textContent = gym;
-        tr.appendChild(tdGym);
-
-        const tdCapacity = document.createElement('td');
-        tdCapacity.textContent = latestEntry.capacity !== null ? latestEntry.capacity : 'N/A';
-        tr.appendChild(tdCapacity);
-
-        const tdStatus = document.createElement('td');
-        tdStatus.textContent = (latestEntry.isClosed && latestEntry.isClosed === "true") ? "Closed" : "Open";
-        tr.appendChild(tdStatus);
-
-        const tdTime = document.createElement('td');
-        if (latestEntry.timestamp) {
-          const dt = new Date(latestEntry.timestamp);
-          // Compute UTC+8 hour using UTC methods.
-          const localHour = ((dt.getUTCHours() + 8) % 24).toString().padStart(2, '0');
-          const localMinute = dt.getUTCMinutes().toString().padStart(2, '0');
-          tdTime.textContent = `${localHour}:${localMinute}`;
-        } else {
-          tdTime.textContent = latestDate;
-        }
-        tr.appendChild(tdTime);
-
-        table.appendChild(tr);
-      });
-
-      container.appendChild(table);
-    }
-
-    // Render historical graphs per gym using Chart.js.
-    function renderHistoricalGraphs() {
-      const container = document.getElementById('historicalGraphs');
-      container.innerHTML = '';
-
-      filteredGyms.forEach(gym => {
-        const gymData = aggregatedData[gym];
-
-        // Create a container for the chart
-        const chartDiv = document.createElement('div');
-        chartDiv.className = 'chart-container';
-        const gymHeader = document.createElement('h3');
-        gymHeader.textContent = gym;
-        chartDiv.appendChild(gymHeader);
-
-        const canvas = document.createElement('canvas');
-        // Ensure a unique id by replacing spaces
-        canvas.id = 'chart_' + gym.replace(/\s+/g, '_');
-        chartDiv.appendChild(canvas);
-        container.appendChild(chartDiv);
-
-        const datasets = [];
-        const weekdays = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
-
-        // Process each date that has raw entries
-        Object.keys(gymData).forEach(date => {
-          const dayData = gymData[date];
-          if (!Array.isArray(dayData)) return; // Skip summarized data
-
-          // Create a 144-length array (one per 10-minute slot) filled with nulls.
-          const dataArray = new Array(globalLabels.length).fill(null);
-          const sortedEntries = dayData.slice().sort((a, b) => a.timestamp - b.timestamp);
-
-          sortedEntries.forEach(entry => {
-            const dt = new Date(entry.timestamp);
-            // Compute the UTC+8 hour using UTC methods.
-            const localHour = (dt.getUTCHours() + 8) % 24;
-            const localMinutes = dt.getUTCMinutes();
-            const slotIndex = localHour * 6 + Math.floor(localMinutes / 10);
-            dataArray[slotIndex] = entry.capacity;
-          });
-
-          // Create series label: include date and day-of-week.
-          const dtDate = new Date(date + "T00:00:00+08:00");
-          const dayOfWeek = weekdays[dtDate.getDay()];
-          const label = `${date} (${dayOfWeek})`;
-
-          datasets.push({
-            label: label,
-            data: dataArray,
-            fill: false,
-            borderWidth: 2,
-            spanGaps: true, // Connect points even when some slots are missing data.
-          });
-        });
-
-        // Only create a chart if there is at least one dataset.
-        if (datasets.length > 0) {
-          new Chart(canvas.getContext('2d'), {
-            type: 'line',
-            data: {
-              labels: globalLabels,
-              datasets: datasets
-            },
-            options: {
-              responsive: true,
-              maintainAspectRatio: true,
-              scales: {
-                x: {
-                  title: {
-                    display: true,
-                    text: 'Time of Day (UTC+8)'
-                  },
-                  ticks: {
-                    maxTicksLimit: 12
-                  }
-                },
-                y: {
-                  title: {
-                    display: true,
-                    text: 'Capacity'
-                  }
-                }
-              },
-              plugins: {
-                legend: {
-                  display: true,
-                  position: 'bottom',
-                  labels: {
-                    font: {
-                      size: 10 // Compact legend labels.
-                    }
-                  }
-                }
-              }
-            }
-          });
-        } else {
-          const msg = document.createElement('p');
-          msg.textContent = 'No detailed (raw) data available for charting.';
-          chartDiv.appendChild(msg);
-        }
-      });
-    }
-  </script>
-</body>
-</html>
+<iframe src="/display.html"
+        style="width: 100%; height: 800px; border: none;"
+        title="Capacities Dashboard">
+</iframe>
 
