Reasonably working graph version, looks better on desktop, bad on mobile

--- a/activesg.html
+++ b/activesg.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: none
 title: Capacities Dashboard
 ---
 
-<h1>Capacities Dashboard</h1>
+<!-- h1>Capacities Dashboard</h1> -->
 
-<iframe src="/display.html"
-        style="width: 100%; height: 800px; border: none;"
-        title="Capacities Dashboard">
-</iframe>
+<!-- <iframe src="/display.html" style="width: 100% !important; height: 800px; border: none;" title="Capacities Dashboard">
+</iframe> -->
 
+<!-- Include display.html directly raw -->
+{% include_relative display.html %}
