--- a/display.html
+++ b/display.html
@@ -1,71 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Activesg Capacities Dashboard</title>
+  <title>ActiveSG Capacities Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 20px;
-    }
-    h1, h2, h3 {
+      background: #f9f9f9;
       color: #333;
     }
-    .search-box {
-      margin-bottom: 20px;
+
+    h1,
+    h2,
+    h3 {
+      color: #333;
+      text-align: center;
     }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .search-box {
+      margin: 20px auto;
+      text-align: center;
+    }
+
+    input#searchInput {
+      padding: 10px;
+      font-size: 1.2em;
+      width: 90%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
     table {
       border-collapse: collapse;
       width: 100%;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+      background: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 10px;
       text-align: left;
     }
+
     th {
       background-color: #f2f2f2;
+      font-weight: 700;
     }
-    /* Chart container using viewport-relative widths */
+
+    .pagination {
+      text-align: center;
+      margin: 10px 0;
+    }
+
+    .pagination button {
+      padding: 8px 12px;
+      margin: 0 5px;
+      font-size: 1em;
+      border: none;
+      background-color: #007BFF;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .pagination button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
     .chart-container {
-      margin-bottom: 40px;
+      margin: 40px auto;
       width: 100%;
-      max-width: 90vw; /* On narrow screens, almost full width */
-      margin-left: auto;
-      margin-right: auto;
+      max-width: 90vw;
+      /* Nearly full width on mobile */
+      background: #fff;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
     }
-    /* On larger screens, constrain to a smaller percentage */
+
     @media (min-width: 768px) {
       .chart-container {
         max-width: 70vw;
+        /* Smaller percentage on wider screens */
       }
     }
   </style>
   <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Chart.js Zoom Plugin -->
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.1"></script>
 </head>
+
 <body>
-  <h1>Activesg Capacities Dashboard</h1>
-  
-  <!-- Search filter -->
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="Search gyms..." />
+  <div class="container">
+    <h1>ActiveSG Capacities Dashboard</h1>
+
+    <!-- Search filter -->
+    <div class="search-box">
+      <input type="text" id="searchInput" placeholder="Search gyms..." />
+    </div>
+
+    <!-- Current capacities display -->
+    <h2>Current Capacities</h2>
+    <div id="currentCapacities">Loading current capacities...</div>
+    <div class="pagination" id="tablePagination"></div>
+
+    <!-- Historical graphs -->
+    <h2>Historical Data (Day-by-Day, 10-min Blocks)</h2>
+    <div id="historicalGraphs">Loading historical graphs...</div>
   </div>
 
-  <!-- Current capacities display -->
-  <h2>Current Capacities</h2>
-  <div id="currentCapacities">Loading current capacities...</div>
-
-  <!-- Historical graphs -->
-  <h2>Historical Data (Day-by-Day, 10-min Blocks)</h2>
-  <div id="historicalGraphs">Loading historical graphs...</div>
-
   <script>
-    // URL for aggregated JSON (use the raw URL)
+    // Debounce function to limit the rate at which a function is called.
+    function debounce(func, wait) {
+      let timeout;
+      return function (...args) {
+        const later = () => {
+          clearTimeout(timeout);
+          func.apply(this, args);
+        };
+        clearTimeout(timeout);
+        timeout = setTimeout(later, wait);
+      };
+    }
+
+    // URL for aggregated JSON (use the raw URL from your GitHub repo)
     const aggregatedUrl = 'https://raw.githubusercontent.com/frizensami/activesg-capacities/main/aggregated_capacities.json';
     let aggregatedData;
     let filteredGyms = []; // gyms matching the search
+
+    // Pagination variables.
+    const rowsPerPage = 5;
+    let currentPage = 1;
 
     // Fixed x-axis labels: one per 10-minute block from 00:00 to 23:50.
     const globalLabels = [];
@@ -77,7 +158,7 @@
       }
     }
 
-    // Load aggregated data
+    // Load aggregated data.
     fetch(aggregatedUrl)
       .then(response => response.json())
       .then(data => {
@@ -85,26 +166,26 @@
         updateDashboard();
       })
       .catch(error => {
-        document.body.innerHTML = 'Error loading data: ' + error;
+        document.querySelector('.container').innerHTML = 'Error loading data: ' + error;
       });
 
-    // Filter gyms as the user types in the search input
-    document.getElementById('searchInput').addEventListener('input', updateDashboard);
+    // Attach search event listener with debounce.
+    document.getElementById('searchInput').addEventListener('input', debounce(updateDashboard, 300));
 
     function updateDashboard() {
       const searchQuery = document.getElementById('searchInput').value.toLowerCase();
-      // Filter gym names based on search query
-      filteredGyms = Object.keys(aggregatedData).filter(gym => gym.toLowerCase().includes(searchQuery));
-      
+      // Sort gym names alphabetically and filter by search query.
+      filteredGyms = Object.keys(aggregatedData).sort((a, b) => a.localeCompare(b))
+        .filter(gym => gym.toLowerCase().includes(searchQuery));
+      currentPage = 1; // Reset pagination on new search.
       renderCurrentCapacities();
       renderHistoricalGraphs();
     }
 
-    // Display current capacities in a table.
     function renderCurrentCapacities() {
       const container = document.getElementById('currentCapacities');
       container.innerHTML = '';
-      
+
       const table = document.createElement('table');
       const headerRow = document.createElement('tr');
       ['Gym', 'Latest Capacity', 'Status', 'Last Update (UTC+8)'].forEach(text => {
@@ -114,40 +195,55 @@
       });
       table.appendChild(headerRow);
 
-      filteredGyms.forEach(gym => {
+      // Paginate: show only rows for current page.
+      const start = (currentPage - 1) * rowsPerPage;
+      const end = currentPage * rowsPerPage;
+      const gymsToShow = filteredGyms.slice(start, end);
+
+      gymsToShow.forEach(gym => {
         const gymData = aggregatedData[gym];
-        // Sort the dates and get the most recent day
+        // Sort dates and get the most recent day.
         const dates = Object.keys(gymData).sort();
         const latestDate = dates[dates.length - 1];
         const dayData = gymData[latestDate];
 
         let latestEntry;
         if (Array.isArray(dayData)) {
-          // For raw data, sort entries by timestamp and take the last one.
           const sorted = dayData.slice().sort((a, b) => a.timestamp - b.timestamp);
           latestEntry = sorted[sorted.length - 1];
         } else {
-          // For summarized days, only average is available.
           latestEntry = { capacity: dayData.average_capacity, timestamp: null, isClosed: '' };
         }
 
         const tr = document.createElement('tr');
+
+        // Gym name cell.
         const tdGym = document.createElement('td');
         tdGym.textContent = gym;
         tr.appendChild(tdGym);
 
+        // Latest Capacity cell with color highlighting.
         const tdCapacity = document.createElement('td');
         tdCapacity.textContent = latestEntry.capacity !== null ? latestEntry.capacity : 'N/A';
+        if (latestEntry.capacity !== null && !isNaN(latestEntry.capacity)) {
+          let alpha = Math.min(Math.max(latestEntry.capacity / 100, 0), 1);
+          tdCapacity.style.backgroundColor = `rgba(255, 0, 0, ${alpha})`;
+        }
         tr.appendChild(tdCapacity);
 
+        // Status cell (red text if closed).
         const tdStatus = document.createElement('td');
         tdStatus.textContent = (latestEntry.isClosed && latestEntry.isClosed === "true") ? "Closed" : "Open";
+        if (latestEntry.isClosed && latestEntry.isClosed === "true") {
+          tdStatus.style.color = "red";
+          tdStatus.style.fontWeight = "bold";
+        }
         tr.appendChild(tdStatus);
 
+        // Last Update cell.
         const tdTime = document.createElement('td');
         if (latestEntry.timestamp) {
           const dt = new Date(latestEntry.timestamp);
-          // Compute UTC+8 hour using UTC methods.
           const localHour = ((dt.getUTCHours() + 8) % 24).toString().padStart(2, '0');
           const localMinute = dt.getUTCMinutes().toString().padStart(2, '0');
           tdTime.textContent = `${localHour}:${localMinute}`;
@@ -160,9 +256,41 @@
       });
 
       container.appendChild(table);
+      renderPaginationControls();
     }
 
-    // Render historical graphs per gym using Chart.js.
+    function renderPaginationControls() {
+      const paginationDiv = document.getElementById('tablePagination');
+      paginationDiv.innerHTML = '';
+      const totalPages = Math.ceil(filteredGyms.length / rowsPerPage);
+
+      const prevBtn = document.createElement('button');
+      prevBtn.textContent = "Prev";
+      prevBtn.disabled = currentPage === 1;
+      prevBtn.addEventListener('click', () => {
+        if (currentPage > 1) {
+          currentPage--;
+          renderCurrentCapacities();
+        }
+      });
+      paginationDiv.appendChild(prevBtn);
+
+      const pageInfo = document.createElement('span');
+      pageInfo.textContent = ` Page ${currentPage} of ${totalPages} `;
+      paginationDiv.appendChild(pageInfo);
+
+      const nextBtn = document.createElement('button');
+      nextBtn.textContent = "Next";
+      nextBtn.disabled = currentPage === totalPages;
+      nextBtn.addEventListener('click', () => {
+        if (currentPage < totalPages) {
+          currentPage++;
+          renderCurrentCapacities();
+        }
+      });
+      paginationDiv.appendChild(nextBtn);
+    }
+
     function renderHistoricalGraphs() {
       const container = document.getElementById('historicalGraphs');
       container.innerHTML = '';
@@ -170,7 +298,7 @@
       filteredGyms.forEach(gym => {
         const gymData = aggregatedData[gym];
 
-        // Create a container for the chart
+        // Create a container for the chart.
         const chartDiv = document.createElement('div');
         chartDiv.className = 'chart-container';
         const gymHeader = document.createElement('h3');
@@ -178,7 +306,6 @@
         chartDiv.appendChild(gymHeader);
 
         const canvas = document.createElement('canvas');
-        // Ensure a unique id by replacing spaces
         canvas.id = 'chart_' + gym.replace(/\s+/g, '_');
         chartDiv.appendChild(canvas);
         container.appendChild(chartDiv);
@@ -186,25 +313,20 @@
         const datasets = [];
         const weekdays = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
 
-        // Process each date that has raw entries
         Object.keys(gymData).forEach(date => {
           const dayData = gymData[date];
-          if (!Array.isArray(dayData)) return; // Skip summarized data
+          if (!Array.isArray(dayData)) return; // Skip summarized data.
 
-          // Create a 144-length array (one per 10-minute slot) filled with nulls.
           const dataArray = new Array(globalLabels.length).fill(null);
           const sortedEntries = dayData.slice().sort((a, b) => a.timestamp - b.timestamp);
-
           sortedEntries.forEach(entry => {
             const dt = new Date(entry.timestamp);
-            // Compute the UTC+8 hour using UTC methods.
             const localHour = (dt.getUTCHours() + 8) % 24;
             const localMinutes = dt.getUTCMinutes();
             const slotIndex = localHour * 6 + Math.floor(localMinutes / 10);
             dataArray[slotIndex] = entry.capacity;
           });
 
-          // Create series label: include date and day-of-week.
           const dtDate = new Date(date + "T00:00:00+08:00");
           const dayOfWeek = weekdays[dtDate.getDay()];
           const label = `${date} (${dayOfWeek})`;
@@ -214,11 +336,10 @@
             data: dataArray,
             fill: false,
             borderWidth: 2,
-            spanGaps: true, // Connect points even when some slots are missing data.
+            spanGaps: true
           });
         });
 
-        // Only create a chart if there is at least one dataset.
         if (datasets.length > 0) {
           new Chart(canvas.getContext('2d'), {
             type: 'line',
@@ -240,6 +361,8 @@
                   }
                 },
                 y: {
+                  min: 0,
+                  max: 100,
                   title: {
                     display: true,
                     text: 'Capacity'
@@ -252,8 +375,23 @@
                   position: 'bottom',
                   labels: {
                     font: {
-                      size: 10 // Compact legend labels.
+                      size: 10
                     }
+                  }
+                },
+                zoom: {
+                  zoom: {
+                    wheel: {
+                      enabled: true
+                    },
+                    pinch: {
+                      enabled: true
+                    },
+                    mode: 'x'
+                  },
+                  pan: {
+                    enabled: true,
+                    mode: 'x'
                   }
                 }
               }
@@ -268,5 +406,5 @@
     }
   </script>
 </body>
-</html>
 
+</html>
